--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       --text:#D4D4D4;
       --card-radius:16px;
       --size:200px;
-      --ring-thickness:5px;
+      --ring-thickness:8px;
       --track:#3a3a3a;
     }
     *{box-sizing:border-box}
@@ -31,144 +31,4 @@
       place-items:center;
       position:relative;
       overflow:hidden;
-      font-family:Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-    }
-    .ring-wrap{
-      width:80%;
-      height:80%;
-      position:relative;
-      display:grid;
-      place-items:center;
-    }
-    .center{
-      position:absolute;
-      inset:0;
-      display:grid;
-      place-items:center;
-      user-select:none;
-    }
-    .percent{
-      color:var(--text);
-      font-weight:700;
-      font-size:24px;
-      letter-spacing:-0.02em;
-    }
-    .controls{
-      position:absolute;
-      bottom:8px;
-      left:50%;
-      transform:translateX(-50%);
-      display:flex;
-      gap:6px;
-    }
-    button{
-      background:#2f2f2f;
-      color:var(--text);
-      border:1px solid #3b3b3b;
-      border-radius:8px;
-      padding:4px 8px;
-      font-weight:600;
-      font-size:12px;
-      cursor:pointer;
-      transition:transform .06s ease, background .15s ease, border-color .15s ease;
-    }
-    button:hover{ background:#343434; border-color:#4a4a4a; }
-    button:active{ transform:translateY(1px) scale(0.98); }
-    button:focus-visible{ outline:2px solid #16a34a; outline-offset:2px; }
-  </style>
-</head>
-<body>
-  <div class="card" role="application" aria-label="Course progress">
-    <div class="ring-wrap">
-      <svg id="ring" viewBox="0 0 100 100" width="100%" height="100%" aria-hidden="true">
-        <circle cx="50" cy="50" r="47.5" fill="none" stroke="var(--track)" stroke-width="5" stroke-linecap="round"/>
-        <defs>
-          <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
-            <stop offset="0%" stop-color="#22c55e"/>
-            <stop offset="100%" stop-color="#16a34a"/>
-          </linearGradient>
-        </defs>
-        <g transform="rotate(-90 50 50)">
-          <circle id="progressArc" cx="50" cy="50" r="47.5"
-            fill="none"
-            stroke="url(#grad)"
-            stroke-width="5"
-            stroke-linecap="round"
-            stroke-dasharray="0 999"
-            stroke-dashoffset="0"
-          />
-        </g>
-      </svg>
-      <div class="center">
-        <div class="percent" id="percentLabel">0%</div>
-      </div>
-    </div>
-    <div class="controls" aria-label="Progress controls">
-      <button id="decBtn" aria-label="Decrease progress by 1 percent">−</button>
-      <button id="incBtn" aria-label="Increase progress by 1 percent">+</button>
-    </div>
-  </div>
-
-  <script>
-    (function(){
-      const url = new URL(window.location.href);
-      const widgetId = url.searchParams.get('id') || 'default';
-      const STORAGE_KEY = `progress-${widgetId}`;
-      let value = clamp(parseInt(localStorage.getItem(STORAGE_KEY) ?? '0', 10));
-
-      const arc = document.getElementById('progressArc');
-      const label = document.getElementById('percentLabel');
-      const incBtn = document.getElementById('incBtn');
-      const decBtn = document.getElementById('decBtn');
-
-      const R = 47.5;
-      const C = 2 * Math.PI * R;
-      arc.setAttribute('stroke-dasharray', `${C} ${C}`);
-
-      const ANIM_MS = 350;
-      updateUI(value, true);
-
-      incBtn.addEventListener('click', () => setValue(value + 1));
-      decBtn.addEventListener('click', () => setValue(value - 1));
-
-      function clamp(n){ return Math.max(0, Math.min(100, isNaN(n) ? 0 : n)); }
-
-      function setValue(newVal){
-        newVal = clamp(newVal);
-        if (newVal === value) return;
-        const from = value;
-        const to = newVal;
-        value = newVal;
-        localStorage.setItem(STORAGE_KEY, String(value));
-        animateArc(from, to, ANIM_MS);
-      }
-
-      function updateUI(val, animate=false){
-        label.textContent = `${val}%`;
-        const offset = C * (1 - val/100);
-        if (!animate){
-          arc.style.transition = 'none';
-          arc.setAttribute('stroke-dashoffset', offset);
-          void arc.getBoundingClientRect();
-        }
-        arc.style.transition = 'stroke-dashoffset ' + (animate ? ANIM_MS : 0) + 'ms ease';
-        arc.setAttribute('stroke-dashoffset', offset);
-      }
-
-      function animateArc(from, to, ms){
-        const start = performance.now();
-        function tick(now){
-          const t = Math.min(1, (now - start) / ms);
-          const eased = 1 - Math.pow(1 - t, 3);
-          const val = Math.round(from + (to - from) * eased);
-          label.textContent = `${val}%`;
-          const offset = C * (1 - val/100);
-          arc.setAttribute('stroke-dashoffset', offset);
-          if (t < 1) requestAnimationFrame(tick);
-        }
-        requestAnimationFrame(tick);
-      }
-    })();
-  </script>
-</body>
-</html>
+      font-family:Inter, ui-sans-serif, system-ui, -apple-system, Sego
