--- a/index.html
+++ b/index.html
@@ -39,3 +39,162 @@
 
     /* ring area */
     .ring-wrap{
+      width:72%;             /* slightly smaller to create comfortable room */
+      aspect-ratio:1/1;
+      position:relative;
+      display:grid;
+      place-items:center;
+      margin-bottom:6px;     /* extra breathing room above the buttons */
+    }
+    .center{
+      position:absolute;
+      inset:0;
+      display:grid;
+      place-items:center;
+      user-select:none;
+      pointer-events:none;
+    }
+    .percent{
+      color:var(--text);
+      font-weight:700;
+      font-size:38px;        /* fills center without touching ring */
+      letter-spacing:-0.02em;
+      line-height:1;
+    }
+
+    /* controls under the ring */
+    .controls{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+      margin-top:2px;
+    }
+    button{
+      background:#2f2f2f;
+      color:var(--text);
+      border:1px solid #3b3b3b;
+      border-radius:10px;
+      padding:6px 10px;
+      font-weight:600;
+      font-size:14px;
+      cursor:pointer;
+      transition:transform .06s ease, background .15s ease, border-color .15s ease;
+      min-width:34px;
+      line-height:1.1;
+    }
+    button:hover{ background:#343434; border-color:#4a4a4a; }
+    button:active{ transform:translateY(1px) scale(0.98); }
+    button:focus-visible{ outline:2px solid #16a34a; outline-offset:2px; }
+
+    /* SVG track color via CSS var so theme remains consistent */
+    .track{ stroke:var(--track); }
+  </style>
+</head>
+<body>
+  <div class="card" role="application" aria-label="Course progress">
+    <div class="ring-wrap">
+      <svg id="ring" viewBox="0 0 100 100" width="100%" height="100%" aria-hidden="true">
+        <!-- base track -->
+        <circle class="track" cx="50" cy="50" r="45.5" fill="none" stroke-width="8" stroke-linecap="round"/>
+        <defs>
+          <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
+            <stop offset="0%" stop-color="#22c55e"/>
+            <stop offset="100%" stop-color="#16a34a"/>
+          </linearGradient>
+        </defs>
+        <!-- progress arc (rotated so 0% is at top) -->
+        <g transform="rotate(-90 50 50)">
+          <circle id="progressArc" cx="50" cy="50" r="45.5"
+            fill="none"
+            stroke="url(#grad)"
+            stroke-width="8"
+            stroke-linecap="round"
+            stroke-dasharray="0 999"
+            stroke-dashoffset="0"
+          />
+        </g>
+      </svg>
+      <div class="center">
+        <div class="percent" id="percentLabel">0%</div>
+      </div>
+    </div>
+
+    <div class="controls" aria-label="Progress controls">
+      <button id="decBtn" aria-label="Decrease progress by 1 percent">−</button>
+      <button id="incBtn" aria-label="Increase progress by 1 percent">+</button>
+    </div>
+  </div>
+
+  <script>
+    (function(){
+      const url = new URL(window.location.href);
+      const widgetId = url.searchParams.get('id') || 'default';
+      const STORAGE_KEY = `progress-${widgetId}`;
+      let value = clamp(parseInt(localStorage.getItem(STORAGE_KEY) ?? '0', 10));
+
+      const arc = document.getElementById('progressArc');
+      const label = document.getElementById('percentLabel');
+      const incBtn = document.getElementById('incBtn');
+      const decBtn = document.getElementById('decBtn');
+
+      // Geometry: r 45.5 keeps 8px stroke clear of the 100x100 viewBox edge
+      const R = 45.5;
+      const C = 2 * Math.PI * R;
+      arc.setAttribute('stroke-dasharray', `${C} ${C}`);
+
+      const ANIM_MS = 350;
+      updateUI(value, true);
+
+      incBtn.addEventListener('click', () => setValue(value + 1));
+      decBtn.addEventListener('click', () => setValue(value - 1));
+
+      // keyboard support remains
+      window.addEventListener('keydown', (e) => {
+        if (['ArrowRight','PageUp','+','=',']'].includes(e.key)) { e.preventDefault(); setValue(value + 1); }
+        if (['ArrowLeft','PageDown','-','['].includes(e.key))    { e.preventDefault(); setValue(value - 1); }
+        if (e.key === 'Home') { e.preventDefault(); setValue(0); }
+        if (e.key === 'End')  { e.preventDefault(); setValue(100); }
+      });
+
+      function clamp(n){ return Math.max(0, Math.min(100, isNaN(n) ? 0 : n)); }
+
+      function setValue(newVal){
+        newVal = clamp(newVal);
+        if (newVal === value) return;
+        const from = value;
+        const to = newVal;
+        value = newVal;
+        localStorage.setItem(STORAGE_KEY, String(value));
+        animateArc(from, to, ANIM_MS);
+      }
+
+      function updateUI(val, animate=false){
+        label.textContent = `${val}%`;
+        const offset = C * (1 - val/100);
+        if (!animate){
+          arc.style.transition = 'none';
+          arc.setAttribute('stroke-dashoffset', offset);
+          void arc.getBoundingClientRect();
+        }
+        arc.style.transition = 'stroke-dashoffset ' + (animate ? ANIM_MS : 0) + 'ms ease';
+        arc.setAttribute('stroke-dashoffset', offset);
+      }
+
+      function animateArc(from, to, ms){
+        const start = performance.now();
+        function tick(now){
+          const t = Math.min(1, (now - start) / ms);
+          const eased = 1 - Math.pow(1 - t, 3);
+          const val = Math.round(from + (to - from) * eased);
+          label.textContent = `${val}%`;
+          const offset = C * (1 - val/100);
+          arc.setAttribute('stroke-dashoffset', offset);
+          if (t < 1) requestAnimationFrame(tick);
+        }
+        requestAnimationFrame(tick);
+      }
+    })();
+  </script>
+</body>
+</html>
